--- a/frontend/index.html
+++ b/frontend/index.html
@@ -456,13 +456,13 @@
             </div>
 
             <!-- Links around the ring -->
-            <a class="icon" style="--i:0" href="https://twitter.com/your-handle" target="_blank" rel="noopener">X</a>
+            <a class="icon" style="--i:0" href="https://x.com/Baracoin_" target="_blank" rel="noopener">X</a>
             <span class="icon ghost" style="--i:1"></span>
             <a class="icon" style="--i:2" href="https://t.me/baracoiin" target="_blank" rel="noopener">TG</a>
             <span class="icon ghost" style="--i:3"></span>
             <a class="icon" style="--i:4" href="https://dexscreener.com/yourpair" target="_blank" rel="noopener">DEX</a>
             <span class="icon ghost" style="--i:5"></span>
-            <a class="icon" style="--i:6" href="https://www.tiktok.com/@your-handle" target="_blank" rel="noopener">TT</a>
+            <a class="icon" style="--i:6" href="https://www.tiktok.com/@baracoin_" target="_blank" rel="noopener">TT</a>
             <span class="icon ghost" style="--i:7"></span>
           </div>
         </div>
