--- a/frontend/index.html
+++ b/frontend/index.html
@@ -165,7 +165,10 @@
   <nav class="nav" id="siteNav">
     <div class="nav-inner">
       <!-- in-page link so it scrolls, not reloads -->
-      <a class="logo" href="#homeSection">🟣 <span>$Bara</span></a>
+<a href="index.html" class="logo" aria-label="Go home">
+  <img src="assets/img/bara-logo.png" alt="$Bara" class="logo-img">
+</a>
+
 
       <button class="nav-toggle" id="navToggle" aria-label="Menu" aria-expanded="false" aria-controls="navMenu">☰</button>
 
