--- a/frontend/index.html
+++ b/frontend/index.html
@@ -182,7 +182,10 @@
         <a class="pill" href="#socials">Socials</a>
       </div>
 
-      <a class="cta" href="javascript:void(0)" onclick="alert('Buy link coming soon')">Buy $BARA</a>
+      <a class="cta" href="https://pump.fun/coin/7eh9hELUXzyjfAaNjQM9AnNvfLNjij5NA65QmceRpump" target="_blank" rel="noopener noreferrer">
+  Buy $BARA
+</a>
+
     </div>
   </nav>
 
